--- a/esports.html
+++ b/esports.html
@@ -11,10 +11,11 @@
 <head>
     <ul>
     <a href="./ultimes noticies.html"><li>Últimes notícies</li></a>
-    <a href="./esports.html" target="_blank"><li>Esports</li></a>
-    <a href="./sucsessos.html"target="_blank"><li>Sucsessos</li></a>
-    <a href="https://www.zara.com/es/ca/"target="_blank"><li>Oci</li></a>
+    <a href="./esports.html"><li>Esports</li></a>
+    <a href="./sucsessos.html"><li>Sucsessos</li></a>
+    <a href="./oci.html"><li>Oci</li></a>
     </ul>
+    <link rel="stylesheet" href="style.css">
     </head>
 <section>
  <h1>El windsurf es consolida com a esport de referència a les illes Balears</h1>
