--- a/sucsessos.html
+++ b/sucsessos.html
@@ -12,9 +12,10 @@
     <ul>
     <a href="./ultimes noticies.html"><li>Últimes notícies</li></a>
     <a href="./esports.html" ><li>Esports</li></a>
-    <a href="sucsessos.html"><li>Sucsessos</li></a>
-    <a href="https://www.zara.com/es/ca/"target="_blank"><li>Oci</li></a>
+    <a href="./sucsessos.html"><li>Sucsessos</li></a>
+    <a href="./oci.html"><li>Oci</li></a>
     </ul>
+    <link rel="stylesheet" href="style.css">
     </head>
 <section>
  <h1>Un incendi forestal causa greus danys a Menorca: milers d'hectàrees afectades</h1>
