--- a/ultimes noticies.html
+++ b/ultimes noticies.html
@@ -12,14 +12,15 @@
     <ul>
     <a href="./ultimes noticies.html"><li>Últimes notícies</li></a>
     <a href="./esports.html" ><li>Esports</li></a>
-    <a href="sucsessos.html"target="_blank"><li>Sucsessos</li></a>
-    <a href="https://www.zara.com/es/ca/"target="_blank"><li>Oci</li></a>
+    <a href="./sucsessos.html"><li>Sucsessos</li></a>
+    <a href="./oci.html"><li>Oci</li></a>
     </ul>
+    <link rel="stylesheet" href="style.css">
     </head>
 <section>
  <h1>Es troba una balena blanca en el Mediterrani</h1>
  <h3>Ahir, mentres uns pescadors estean fents la seva habitual ruta es van trobar en mig del mar perduda a una balena blanca </h3>
- <img src="https://res.cloudinary.com/manawa/image/private/f_auto,c_limit,w_3840,q_auto/30e4d5d8df447fdadb3168a33fb7b8b2" alt="30%">
+ <img src="https://i.ytimg.com/vi/roDkgbhvmsQ/mqdefault.jpg" alt="30%">
  <h4>En un esdeveniment inèdit i sorprenent, s'ha localitzat una balena blanca al mar Mediterrani. Aquesta espècie, que fins ara només s'havia observat en oceans més freds i més al nord, ha estat vista a les aigües pròximes a les costes de la península Ibèrica. La seva presència ha aixecat gran expectació entre científics i naturalistes, ja que es tracta d'un avistament molt poc comú en aquesta regió.
 
 Els primers a detectar l'animal van ser un grup de pescadors locals que, mentre realitzaven les seves activitats diàries, van quedar sorpresos per l'aparició d'una balena blanca de grans dimensions nadant a prop de la seva embarcació. Aquest descobriment va ser ràpidament comunicat a les autoritats i experts en fauna marina, que van iniciar una investigació per seguir el rastre de l'animal.
