--- a/oci.html
+++ b/oci.html
@@ -12,26 +12,25 @@
     <ul>
     <a href="./ultimes noticies.html"><li>Últimes notícies</li></a>
     <a href="./esports.html" ><li>Esports</li></a>
-    <a href="sucsessos.html"target="_blank"><li>Sucsessos</li></a>
-    <a href="https://www.zara.com/es/ca/"target="_blank"><li>Oci</li></a>
+    <a href="./sucsessos.html"><li>Sucsessos</li></a>
+    <a href="./oci.html"><li>Oci</li></a>
     </ul>
+    <link rel="stylesheet" href="style.css">
     </head>
 <section>
- <h1>Es troba una balena blanca en el Mediterrani</h1>
- <h3>Ahir, mentres uns pescadors estean fents la seva habitual ruta es van trobar en mig del mar perduda a una balena blanca </h3>
- <img src="https://res.cloudinary.com/manawa/image/private/f_auto,c_limit,w_3840,q_auto/30e4d5d8df447fdadb3168a33fb7b8b2" alt="30%">
- <h4>En un esdeveniment inèdit i sorprenent, s'ha localitzat una balena blanca al mar Mediterrani. Aquesta espècie, que fins ara només s'havia observat en oceans més freds i més al nord, ha estat vista a les aigües pròximes a les costes de la península Ibèrica. La seva presència ha aixecat gran expectació entre científics i naturalistes, ja que es tracta d'un avistament molt poc comú en aquesta regió.
+ <h1>El Festival de Música d'Ibiza 2025 atrau milers de visitants amb la seva programació exclusiva</h1>
+ <h3>Un dels esdeveniments més esperats de l'any a l'illa, amb grans noms de la música electrònica i un enfocament més sostenible</h3>
+ <img src="https://dv7zfk0hwmxgu.cloudfront.net/sites/default/files/styles/auto_1500_width/public/promoter-images/129723/slideshow-1549287319.jpg" alt="30%">
+ <h4>biza es prepara per acollir una nova edició del Festival de Música d'Ibiza 2025, un dels esdeveniments més esperats de l'any a l'illa. Aquesta edició promet ser més gran i diversificada que mai, amb una àmplia programació que inclou els millors artistes de diversos gèneres musicals.
 
-Els primers a detectar l'animal van ser un grup de pescadors locals que, mentre realitzaven les seves activitats diàries, van quedar sorpresos per l'aparició d'una balena blanca de grans dimensions nadant a prop de la seva embarcació. Aquest descobriment va ser ràpidament comunicat a les autoritats i experts en fauna marina, que van iniciar una investigació per seguir el rastre de l'animal.
+El festival tindrà lloc entre els dies 10 i 12 de juny de 2025, en diversos espais emblemàtics de l'illa, com el Pacha Ibiza, Amnesia i la platja de Talamanca, que es transformaran en escenaris de música en viu i espectacles electrònics de primera línia. Aquest any, el festival aposta per una combinació de sons electrònics, música indie, pop i flamenc, amb una representació d’artistes internacionals i també locals, mostrant el talent de la comunitat musical d’Ibiza.
 
-Experts de diverses organitzacions marines han confirmat que la balena blanca (Beluga, Delphinapterus leucas) és una espècie d'ocià de grans dimensions, habitual en les aigües més fredes del hemisferi nord, com l'Àrtic i l'Atlàntic nord. La seva aparició en aigües mediterrànies suggereix que el canvi climàtic podria estar alterant els hàbitats tradicionals de moltes espècies marines.
+Els organitzadors han destacat la importància de la sostenibilitat i el respecte pel medi ambient, amb diverses iniciatives per reduir l'impacte del festival, com l'ús d'energia renovable, la gestió de residus i la promoció de transports sostenibles per als assistents.
 
-Els científics han establert que la balena blanca, tot i ser una espècie adaptada a temperatures més fredes, ha estat observada navegant tranquil·lament per les aigües mediterrànies, el que obre un debat sobre com els animals marins es veuen afectats pels canvis ambientals.
+A més, el Festival de Música d'Ibiza 2025 ofereix una gran oferta d’activitats paral·leles, com tallers de producció musical, masterclasses d’artistes de renom, i espais dedicats a la gastronomia local i internacional. Les platges d'Ibiza també seran part del festival, amb sessions de música relaxant al capvespre, creant l'ambient perfecte per a una experiència única.
 
-"És una sorpresa, i alhora una crida d'atenció. Les espècies marines estan en constant adaptació, però també hem d'estar alertes a l'impacte de l'escalfament global i altres factors que poden alterar els seus hàbitats naturals", afirma Maria Torres, biòloga marina del Centre d'Estudis del Mar Mediterrani.
+Els tiquets per al festival ja estan disponibles en línia, i es preveu que les entrades s’esgotin ràpidament, atesa la gran demanda que genera aquest esdeveniment cada any.
 
-Els experts han seguit de prop l'animal amb l'esperança de poder estudiar el seu comportament i entendre millor els factors que podrien haver-lo portat fins a aquestes latituds. També han emès recomanacions per a les embarcacions a la zona perquè respectin distàncies segures i evitin molestar l'animal.
-
-Per ara, la balena blanca continua sent una figura misteriosa en aquest ecosistema marí, però la seva presència no només ens recorda la importància de protegir la fauna marina, sinó que també ens adverteix sobre els canvis que el nostre planeta està vivint.</h6>
+L'illa de Ibiza es confirma així com un dels destins musicals més destacats del món, i aquest festival serà, sens dubte, una cita imprescindible per a tots els amants de la música i la cultura.
 </body>
 </html>
